# QRCode-CV4

./: .gitignore  CMakeLists.txt  tys_data.txt
src/: qrcode.cpp  qrcode.h  test.cpp
